--- a/src/index.css
+++ b/src/index.css
@@ -31,11 +31,11 @@ body {
   padding: 0;
   font-weight: 600;
   line-height: 1.5;
-  font-size: 18px;
+  font-size: 20px;
   letter-spacing: 0.1em;
   background: var(--darker);
   color: var(--light);
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Marvel', sans-serif;
 }
 
 h1,
@@ -44,7 +44,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Aladin', cursive;
+  font-family: 'Marvel', cursive;
   font-weight: 500;
   margin: 5px 0;
   line-height: 1.25;
@@ -77,7 +77,7 @@ h6 {
 }
 
 p {
-  font-size: 1.1rem;
+  font-size: 1.25rem;
   margin: 20px 0;
   line-height: 2rem;
 }
@@ -186,7 +186,7 @@ header img {
 
 nav {
   position: relative;
-  font-family: 'Aladin', cursive;
+  font-family: 'Marvel', cursive;
   font-size: 2.5rem;
   margin: 30px 20px;
 }
