updating content and project descriptions

--- a/src/index.css
+++ b/src/index.css
@@ -339,6 +339,11 @@ textarea {
   max-width: auto ;
 }
 
+#aboutMe {
+  display: flex;
+  flex-direction: row;
+}
+
 .project-text:hover {
   background-color: var(--alpha);
   opacity: 1;
